--- a/css/app.css
+++ b/css/app.css
@@ -1,38 +1,24 @@
 body {
     background: #fff;
-    font-family: 'Oswald', sans-serif;
     font-family: 'Raleway', sans-serif;
-    /* font-family: 'Lato', sans-serif; */
-
-
-    /* Ventana Azul - color.adobe.com
-    https://color.adobe.com/nl/Ventana-Azul-color-theme-2159606/*/
-    color: #F2385a;
-    color: #f5a503;
-    color: #e9f1df;
-    color: #4ad9d9;
-    color: #36B1BF;
-    /* 2D95A1 darker version */
-    background-color: #e9f1df;
-    color: #11393D;
+    color: #12224c;
 }
-
 li {
     list-style: none;
 }
-.article {
-    font-size: 1.2rem;  /* module size sized in rems */
-}
 p {
     letter-spacing: 0.03rem;
-
 }
 a {
-    color: #11393D;
+    color: #12224c;
 }
 a:hover {
-    color: #36B1BF;
+    color: #5bd0eb;
 }
+input, button, select, textarea {
+    font-family: 'Raleway', sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Raleway', sans-serif;
 }
@@ -40,62 +26,83 @@ h3, h4, h5, h6 {
     font-weight: 700;
 }
 
-h1 {
-    font-size: 3.6rem;
-    font-weight: 700;
-    color: #36B1BF;
-}
-h2, .h2 {
-    font-size: 2.2rem;
-}/* h1 font size / 1,618 */
-h3, .h3 {
-    font-size: 1.38rem;
-}/* h2 font size / 1,618 */
-
-h1, .h1 {
+h1{
     font-size: 2.6rem;
-  } /* h2 font size * 1,618 */
-  h2, .h2 {
-      font-size: 1.618rem;
-  }    /* h3 font size * 1,618 */
-  h3, .h3 {
-      font-size: 1rem;
-  }
+    line-height: 1.2;
+} /* h2 font size * 1,618 */
+h2 {
+    font-size: 1.618rem;
+}    /* h3 font size * 1,618 */
+h3 {
+    font-size: 1rem;
+}
 
 @media print, screen and (min-width: 40em) {
-    h1, .h1 {
-      font-size: 4.2rem;
-    } /* h2 font size * 1,618 */
-    h2, .h2 {
-        font-size: 2.6rem;
-    }    /* h3 font size * 1,618 */
-    h3, .h3 {
-        font-size: 1.618rem;
+
+    h1 {
+        font-size: 3.6rem;
+        line-height: 1.1;
     }
+    h2{
+        font-size: 2.2rem;
+    }/* h1 font size / 1,618 */
+    h3 {
+        font-size: 1.38rem;
+    }
+/* h2 font size / 1,618 */
+
+    /* h1, .h1 {
+      font-size: 4.2rem;
+    }  */
+    /* h2 font size * 1,618 */
+    /* h2, .h2 {
+        font-size: 2.6rem;
+    }    */
+     /* h3 font size * 1,618 */
+    /* h3, .h3 {
+        font-size: 1.618rem;
+    } */
 
 }
+input, button, select, textarea {
+    font-family: 'Raleway', sans-serif;
+  }
 
 
 /* ===========================================  title section =====================================  */
-.sticky{
-    background-color: #36B1BF;
+.sticking {
+    background-color: rgba(255,255,255, 0.5);
+    /* background-color: #00c5e8; */
+    position: fixed;
+    width: 100%;
 }
 .title-bar, .top-bar {
-    background-color: #fff;
-    background-color: #36B1BF;
-    padding: 0.3rem;
+    padding: 0rem;
     z-index: 999;
     /* transition: all 0.5s ease; */
     animation: slideInDown 0.5s;
 }
+.top-bar {
+    background-color: rgba(0, 0, 0, 0);
+
+}
+.title-bar {
+    /* background-color: rgba(255,255,255, 0.5); */
+    background-color: rgba(0, 0, 0, 0);
+}
 .title-bar, .title-bar a {
-    color: #fff;
+    color: #12224c;
     font-weight: 400;
+}
+.title-bar-title {
+    margin: 0 auto;
+}
+.top-bar-title {
+    margin: 0.2rem 0;
 }
 
 .top-bar ul {
-    background-color: transparent;
-
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .logo a {
@@ -108,17 +115,15 @@ h1, .h1 {
     text-transform: lowercase;
     letter-spacing: 0.01em;
     margin-right: 2rem;
-    /* line-height: 1; */
 }
 .logo a:hover {
-    color: #fff;
+    color: #00c5e8;
 }
 .logo a span {
     vertical-align: 10%;
     font-weight: 800;
-    background: linear-gradient(#4ad9d9 50%,#4ad9d9 0) repeat-x 0 90%;
+    background: linear-gradient(#5bd0eb 50%,#5bd0eb 0) repeat-x 0 90%;
     background-size: 0.2rem 0.2rem;
-
 }
 
 .menu a {
@@ -128,51 +133,26 @@ h1, .h1 {
     /* font-family: 'Josefin Sans', sans-serif; */
     /* line-height: 1;   foundation standard setting */
     padding:0 0 0.7rem 0;
-    border-bottom: 0.2rem solid transparent;
+    border-bottom: 0.2rem solid rgba(0, 0, 0, 0);
 }
 
-.menu li {
+.menu li:not(:last-child) {
     margin-right: 2rem;
 }
 .menu li a {
     display: inline;
+    font-size: 0.8rem;
 }
 .menu li a:hover,
 .menu li a.active{
     /* border-bottom: 0.2rem solid #fff;
     color: white; */
-    background: linear-gradient(#fff 50%,#fff 0) repeat-x 0 80%;
-    background-size: 0.12rem 0.12rem;
+    background: linear-gradient(#00c5e8 50%,#00c5e8 0) repeat-x 0 55%;
+    background-size: 0.2rem 0.2rem;
 }
 .menu li a:visited {
-    color: #11393D;
+    /* color: #11393D; */
 }
-
-
-.left-align {
-    text-align: left;
-}
-.bold{
-    font-weight: 600;
-}
-.regular {
-    font-weight: 400;
-}
-.italic {
-    font-style: italic;
-}
-.extrabold {
-    font-weight: 800;
-}
-.name .extrabold {
-    font-weight: 700;
-}
-.underline{
-    display: inline-block;
-    padding-bottom: 0.3rem;
-    border-bottom: 0.2rem solid #36B1BF;
- }
-
 
 
 /* responsive Sticky Menu  */
@@ -204,91 +184,249 @@ h1, .h1 {
       box-shadow: 0 7px 0 #000, 0 14px 0 #000;
   }
 /* end navigation */
-.service, .hoofdkop {
-    text-align: center;
 
+/* intro with hero image and header */
+
+.intro {
+    background: #12224c;
+    padding: 0 0 4rem;
+    position: relative;
+}
+.hero-container{
+    background: linear-gradient(#00c5e8 ,#d3f3f8 );
+    height: 61.8vh;
+    height: 30rem;
+    /* margin-top: 1rem; */
+    position: relative;
+    overflow: hidden;
+}
+.hero-skyline {
+    position: absolute;
+    top: 2.2rem;
+    /* bottom: 0; */
+    height: 27.8rem;
+    width: 100%;
+    /* z-index: 100; */
+}
+.hero-skyline img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    max-width: none;
+}
+.boat {
+    position: absolute;
+}
+.boat.left {
+    animation: driftToLeft-s 60s linear infinite;
+}
+#reflectie,
+#reflectie-2 {
+    opacity: 0.3;
+}
+#boot {
+    animation: boatSwing 5s ease-in-out infinite;
+    transform-origin: center;
+}
+#reflectie{
+    animation: boatSwingMirrored 5s ease-in-out infinite;
+    transform-origin: center;
+}
+.boat * {
+    display: block;
+}
+.boat img,
+.boat svg  {
+    width: 1rem;
+}
+/* .boat img {
+    width: 2.5rem;
+    width: 1.5rem;
+    height: auto;
+
+} */
+.left  {
+    top: 28rem;
+    left: 20%;
+
+    /* for testing */
+    /* right: 10.5%; */
+    width: 1.5rem;
+}
+.right {
+    top: 27rem;
+    right: 10%;
+}
+.hero-leftToRight {
+    position: absolute;
+    left: -40rem;
+    top: 1rem;
+    animation: leftToRight 10s linear infinite;
+}
+.contrail {
+    position: absolute;
+    left: 0;
+    top:2.35rem;
+}
+.path {
+    stroke-dasharray: 1650;
+    stroke-dashoffset: 1650;
+    animation: dash 10s linear infinite ;
+}
+/* nog prefixes toevoegen bij alle animaties! */
+@keyframes dash {
+    55% {
+        stroke-dashoffset: 1800;
+        opacity: 1;
+    }
+    80% {
+      opacity: 1;
+
+    }
+
+   90% {
+        opacity: 0.5;
+    }
+    95% {
+        opacity: 0.2;
+    }
+
+    90%, to {
+        stroke-dashoffset: 0;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes leftToRight {
+    from, 45%   {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(0, 0, 0);
+        visibility: visible;
+    }
+    90%, to {
+        -webkit-transform: translate3d(2000px, 0, 0);
+        transform: translate3d(2000px, 0, 0);
+    }
+}
+@keyframes boatSwing {
+   from {
+      -webkit-transform: rotate3d(0, 0, 1, 2deg);
+      transform: rotate3d(0, 0, 1, 2deg);
+    }
+   50% {
+      -webkit-transform: rotate3d(0, 0, 1, -2.5deg);
+      transform: rotate3d(0, 0, 1, -2.5deg);
+    }
+    to {
+      -webkit-transform: rotate3d(0, 0, 1, 2deg);
+      transform: rotate3d(0, 0, 1, 2deg);
+    }
+  }
+  @keyframes boatSwingMirrored {
+    from {
+       -webkit-transform: rotate3d(0, 0, 1, -2deg);
+       transform: rotate3d(0, 0, 1, -2deg);
+     }
+    50% {
+       -webkit-transform: rotate3d(0, 0, 1, 2.5deg);
+       transform: rotate3d(0, 0, 1, 2.5deg);
+     }
+     to {
+       -webkit-transform: rotate3d(0, 0, 1, -2deg);
+       transform: rotate3d(0, 0, 1, -2deg);
+     }
+   }
+@keyframes driftToLeft {
+    from {
+        -webkit-transform: translate3d(850px, 0, 0);
+        transform: translate3d(850px, 0, 0);
+      }
+
+      to {
+        /* visibility: hidden; */
+        -webkit-transform: translate3d(-500px, 0, 0);
+        transform: translate3d(-500px, 0, 0);
+      }
+}
+/* small screens */
+@keyframes driftToLeft-s {
+    from {
+        -webkit-transform: translate3d(300px, 0, 0);
+        transform: translate3d(400px, 0, 0);
+      }
+
+      to {
+        /* visibility: hidden; */
+        -webkit-transform: translate3d(-150px, 0, 0);
+        transform: translate3d(-200px, 0, 0);
+      }
 }
 
-.hero-container{
-    height: 61.8vh;
-    margin-top: 1rem;
-    }
+article {
+    position:relative;
+    padding-bottom: 1rem;
+    margin: 2rem 0 4rem;
+    text-align: center;
+}
+.boulevard {
+    background: #597FB9;
+    color: #fff;
+    padding: 4rem 0;
+    text-align: center;
+    position: relative
+}
 
-    .hero-image {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: 50% 50%;
-        max-width: none;
-    }
+.boulevard p:after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 5rem;
+    height: 0.5rem;
+    background: #12224c;
+        left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+}
 .hoofdkop {
     padding: 1rem 0 0;
+    margin-bottom: 3rem;
     text-align: center;
     transition-delay: 0.5s;
     animation: slideInLeft 0.8s;
 }
 .hoofdkop.omhoog {
-    margin-top: -7.5rem;
+    /* margin-top: -3.5rem;
+    margin-bottom: 6rem; */
+    margin: 0 auto;
     padding: 1rem 0 ;
     position: relative;
 }
 .hoofdkop.omhoog h1 {
-  color: #4ad9d9;
+    color: #fff;
 }
 .hoofdkop h1 {
     /* margin-bottom: 2rem; */
-    color: #36B1BF;
+    color: #fff;
     display: inline;
     /* background: #F2385a; */
-    background: linear-gradient(#F2385a 50%,#F2385a 0) repeat-x 0 90%;
-    background-size: 0.2rem 0.2rem;
-    font-weight: 300;
-    line-height: 1;
-    font-size: 3rem;
-
+    /* background: linear-gradient(#F2385a 50%,#F2385a 0) repeat-x 0 90%;
+    background-size: 0.15rem 0.15rem; */
+    font-weight: 100;
+    font-size: 2rem;
 }
 .hoofdkop h1 span {
     font-weight: 700;
+    display: inline-block;
+    width: 100%;
+    font-size: 20vw;
+    line-height: 4rem;
 }
-.hoofdkop h2 {
-    margin: 3rem 0 2rem;
-   font-weight: 400;
-   font-size: 1.5rem;
-   color: #11393D;
-   line-height: 1.1;
-}
-.hoofdkop p:after {
-    position: absolute;
-    content: "";
-    width: 5rem;
-    height: 0.5rem;
-    background: #fff;
-      left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0 auto;
-}
-.hoofdkop h1:before,
-.hoofdkop h1:after {
-    position: absolute;
-    content: "";
-    width: 0.7rem;
-    height: 0.7rem;
-    /* border-radius: 50%; */
-    background: #4ad9d9;
-}
-.hoofdkop h1:before {
-    top: 4rem;
-    margin: 0rem -2rem;
-    /* top: 0rem;
-    left: 1.5rem; */
-}
-.hoofdkop h1:after{
-    top: 4.5rem;
-    margin: 0 1rem;
-}
-.service {
 
+.service {
+    text-align: center;
     padding: 1rem 0.5rem;
 }
 .service h3 {
@@ -309,45 +447,52 @@ h1, .h1 {
 
 @media print, screen and (min-width: 40em)  {
     .intro {
-        padding: 4rem 0;
+        padding: 0 0 8rem;
     }
-    .hoofdkop.omhoog {
-        margin-top: -6rem;
+    .hero-container {
+        height: 80vh;
+        height: 43rem;
     }
-    .hoofdkop.omhoog h1:before {
-        top: 3rem;
+    .hero-skyline {
+        height: 39rem;
+        top: 4rem;
     }
-    .hoofdkop.omhoog h1:after {
+    .hero-leftToRight {
         top: 1rem;
     }
-
+    .contrail {
+        top:3.7rem;
+    }
+    .boat img,
+    .boat svg{
+        width: 2rem;
+    }
+    .left  {
+        top: 39.5rem;
+        left: 30%;
+    /* for testing */
+        /* right: 35.5%; */
+    }
+    .right {
+        top:38rem;
+        right: 35%;
+    }
+    .boat.left {
+        animation: driftToLeft 120s linear infinite;
+    }
+    .hoofdkop h1 span {
+        line-height: 10rem;
+    }
     .hoofdkop h1 {
-        line-height: 0.9;
         margin-bottom: 2rem;
-        font-size: 4.2rem;
-
-    }
-    .hoofdkop h1:before {
-        top: 6rem;
-        /* left: 1.5rem; */
-    }
-    .hoofdkop h1:after{
-        top: 7.5rem;
-
-    }
-
-    .service,
-    .hoofdkop {
-        padding: 3rem 0.5rem;
+        font-size: 3rem;
     }
 }
 
-.big-image {
-    margin: 0;
-    padding: 0.5em 0 0 0;
-    color: #fff;
-    transition: all 0.5s ease;
-    /* slide: 0.5s; */
+@media print, screen and (min-width: 66em) {
+    .hoofdkop h1 span {
+        font-size: 25vh;
+    }
 }
 
 .bottom-content-section {
@@ -366,7 +511,7 @@ h1, .h1 {
     letter-spacing: 0.05rem;
 }
 .button:hover {
-    background-color: #36B1BF;
+    background-color: #5bd0eb;
 }
 .button-center {
     text-align: center;
@@ -382,6 +527,7 @@ h1, .h1 {
 .portfolio {
     margin-top: 1rem;
  }
+
 
 .masonry-css {
     -webkit-column-count: 1;
@@ -399,15 +545,25 @@ h1, .h1 {
 
     padding:0 0 1rem 0;
   }
+  ,
+  .no-masonry-css-item {
+
+    margin-bottom: 0rem;
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    padding:0 0 1rem 0;
+  }
   .tile {
       position: relative;
+      overflow: hidden;
   }
   .tile__overlay {
     display: flex;
       position: static;
       opacity: 1;
       transform: none;
-
   }
   .tile__overlay > * {
     flex: 1;
@@ -415,8 +571,6 @@ h1, .h1 {
   .info-panel {
     padding: 2rem;
     text-align: center;
-    color: #f5a503;
-    /* height: 100%; */
     vertical-align: middle;
   }
   .info-panel--blue {
@@ -430,15 +584,26 @@ h1, .h1 {
   }
   .info-panel__header {
     display: inline;
-    background: linear-gradient(#fff 50%,#fff 0) repeat-x 0 90%;
-    background-size: 0.2rem 0.2rem;
+    padding: 0.1rem;
+  }
+  .info-panel__header,
+  .project-content h3 {
+    color: #f5a503;
     letter-spacing: 0.15rem;
     text-transform: uppercase;
+    font-size: 1rem;
     font-weight: 900;
-  }
-  .info-panel__content {
+}
+
+  .info-panel__content,
+  .project .project-content  {
       color: #fff;
   }
+.info-panel__header,
+.project-content h3 span {
+    background: linear-gradient(#fff 50%,#fff 0) repeat-x 0 100%;
+    background-size: 0.05rem 0.05rem;
+}
 
   @media screen and (min-width: 40em) {
     .portfolio {
@@ -505,7 +670,8 @@ h1, .h1 {
       -webkit-column-count:2;
               column-count: 2;
     }
-    .masonry-css-item {
+    .masonry-css-item,
+    .no-masonry-css-item {
         padding: 1rem;
       }
   }
@@ -517,8 +683,6 @@ h1, .h1 {
     }
   }
 
-
-
   /* end masonry type grid layout */
 
 /* vervolgpagina */
@@ -526,9 +690,8 @@ h1, .h1 {
     /* margin-top: 1.5rem; */
     padding: 1rem 0;
 }
-.project .tekst {
+.project .project-content {
     text-align: left;
-    color: #fff;
     margin-bottom: 1rem;
     margin-top: 0.5rem;
     position: relative;
@@ -537,27 +700,18 @@ h1, .h1 {
 
 }
 
-.tekst h3{
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 900;
+.project-content h3{
     text-indent: 3rem;
 
 }
-.tekst h3 span {
-    color: #f5a503;
-    background: linear-gradient(#fff 50%,#fff 0) repeat-x 0 90%;
-    background-size: 0.2rem 0.2rem;
-}
-.tekst h3:before {
+.project-content h3:before {
     position: absolute;
     content: "";
     width: 0.68rem;
     height: 0.68rem;
-    background: #4ad9d9;
+    background: #5bd0eb;
 }
-.tekst h3:before {
+.project-content h3:before {
     top: 0rem;
     left: 1.5rem;
 }
@@ -585,7 +739,7 @@ a.next-project, a.previous-project, a.close-project {
 
     border: 0.15rem solid #f5a503;
     background: rgba(255,255,255, 0.5);
-    color: #17244C;
+    color: #12224c;
 
 }
 
@@ -612,7 +766,7 @@ a.next-project, a.previous-project, a.close-project {
     .project-toepassing {
         padding-top: 2rem;
     }
-    .project-toepassing .tekst.medium-5 {
+    .project-toepassing .project-content.medium-5 {
        margin-top: 3rem;
     }
     .image-container img {
@@ -624,7 +778,7 @@ a.next-project, a.previous-project, a.close-project {
     a.button.close-project {
         border: 0.15rem solid #f5a503;
         background: rgba(255,255,255, 0.5);
-        color: #17244C;
+        color: #12224c;
         margin: 1rem;
     }
 
@@ -639,15 +793,19 @@ footer i {
     color: #fff;
 }
 .footer {
-    background-color: #17244C;;
+    background-color: #12224c;
     color: #fff;
     padding: 2rem 1rem;
     margin-top: 3rem;
     width: 100%;
   }
 .footer-top h3 {
-    background: linear-gradient(#4ad9d9 50%,#4ad9d9 0) repeat-y 0% 0;
+    background: linear-gradient(#5bd0eb 50%,#5bd0eb 0) repeat-y 0% 0;
     background-size: 0.2rem 0.2rem;
+}
+.footer-top div {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .menu.footer-top-links {
     justify-items: center;
@@ -712,8 +870,9 @@ footer i {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #36B1BF;
-    padding: 1rem 0 0.3rem;
+    background-color: rgba(255,255,255, 0.5);
+    background-color: rgba(255,255,255, 1);
+    padding: 0.5rem 0 0.3rem;
     z-index: 999;
 
 }
@@ -726,7 +885,7 @@ footer i {
 
 
   .footer-bottom .footer-bottom-links a {
-    color: #17244C;
+    color: #12224c;
   }
   .footer-bottom-links.menu li a {
       background-position-y: 0%;
